Fixed bug #35360 (exceptions in interactive mode (php -a) may cause crash)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@201157 c90b9560-bf6c-de11-be94-00142212c4b1